# molecule-cloud

./: .gitignore  README.md  manage.py  pyproject.toml
MoleculeCloud/: .env example  asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
file_storage/: models.py
file_storage/migrations/: 0001_initial.py  0002_alter_directory_parent.py  0003_file_file_alter_file_last_edit.py
file_storage/tests/: test_models.py
